--- a/src/index.pug
+++ b/src/index.pug
@@ -5,8 +5,9 @@ html(lang="ru")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title="Wiki Search"
   body
-    form(class="search-form")
-      label(class="search-form__label")
-        input(class="search-form__input" type="text" name="search-input" value="" placeholder="Введите название статьи")
-      button(class="search-form__button" type="submit" name="search-button") Поиск
-    ul(class="article-cards")
+    .form-wrapper
+      form(class="search-form")
+        label(class="search-form__label")
+          input(class="search-form__input" type="text" name="search-input" value="" placeholder="Введите название статьи")
+        button(class="search-form__button" type="submit" name="search-button") Поиск
+      ul(class="article-cards")
